--- a/views/home.hbs
+++ b/views/home.hbs
@@ -2,97 +2,172 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <!-- all CSS -->
+    <!-- <link rel="stylesheet" type="text/css" href="/static/css/bootstrap.min.css"> -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <script src="/js/libs/jquery-3.3.1.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <link rel="stylesheet" type="text/css" href="/static/css/custom.css">
     <link rel="stylesheet" type="text/css" href="/static/css/weather-icons.min.css">
-    {{!-- <link rel="stylesheet" type="text/css" href="/static/css/weather-icons.css"> --}}
-    <link href='https://fonts.googleapis.com/css?family=Assistant' rel='stylesheet'/>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <title>Mango Riviera</title>
-
-            <!-- css customized for this page -->
-        <style type="text/css">
-						
-  </style>
   
-  </head>
-  {{!-- <body style="background-size: 100%; background-attachment: fixed;   opacity: 0.2;position: absolute;z-index: -1;" background="/static/images/sandbeach.jpeg"> --}}
-<body style="background-size: 100%; background-attachment: fixed; " background="/static/images/sandbeach.jpeg"></body>
+    <!-- all JS -->
+    <script src="/js/libs/jquery-3.3.1.min.js"></script>
+    <!-- <script src="/js/libs/bootstrap.min.js"></script> -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script src="socket.io/socket.io.js"></script>
     <script type='text/javascript' src='/js/libs/hbs.js'></script>
-
     <script src="/js/libs/moment-with-locales.js"></script>
-    <script src="/js/libs/mustache.js"></script>
+
+    <!-- fonts -->
+    <link href='https://fonts.googleapis.com/css?family=Assistant' rel='stylesheet'/>
     
-    <!--div class="container"-->
+    <!-- included local html's -->
+    <script> $(function(){$("#pickform").load("pickform.html"); });</script> 
+    <!-- <script> $(function(){$("#testfrag").load("frag.hbs"); });</script>  -->
 
-      <script type="text/javascript" src="/js/weather.js"></script>
-      <script type="text/javascript" src="/js/weatherScheduler.js"></script>
+    <title>Mango Riviera</title>
+  </head>
 
+  <body style="background-size: 100%; background-attachment: fixed;" background="/static/images/sandbeach.jpeg">
 
+    
+    <script type="text/javascript" src="/js/weather.js"></script>
+    <script type="text/javascript" src="/js/weatherScheduler.js"></script>
 
     <div id="content">
+      
 
-        {{!-- <script id="menu_partial_template" type="text/x-handlebars-template">
-          {{> partialTemplate_MENU currentpage = "Wind: 40 miles/h, 82"}}<br>
-        </script>
+        <!-- code for HEADER / MENU partial -->
+        {{!-- <script id="header-partial" type="text/x-handlebars-template"> --}}
+          {{> header firstlink = "About"}}
+        {{!-- </script> --}}
 
-        <div id="menu_placeholder"></div>
+        <div id="header_placeholder"></div>
         
-        <script src="/js/menu.js"></script> --}}
-        {{> header firstlink = "About"}}
+        <script src="/js/header.js"></script>
+
+        <!-- controls for video background -->
+        <a class="lists" style="position:absolute;top:0;right:10px;font-size:14px" href="#" id="videoBtn" onclick="videoCtrl()">Pause</a>
+        <a class="lists" style="position:absolute;top:30px;right:10px;font-size:14px" href="#" id="audioBtn" onclick="audioCtrl()">Un-mute</a>
+      
+        <!-- BS container starts after header -->
       <div class="container">
       
       </div>
-        <div id="left">
-            
-        <div id="weather_placeholder"></div>
-        
-        <script src="/js/weather.js"></script>
+      <!-- start of LEFT panel -->
+      <div id="left">
 
-            <!- activity, rating, percentage booked, book or enroll buttons ->
-            <div>
-                
-              <h4>Activities</h4>  <!- dolphine show, visit ancient castle, sport contest   ->
-              <ul id="tab"></ul>
-            </div>
-            
-            <h4>Spa and Wellness</h4>  <!- spa Wellness, fitness O'zone, crossfit ManGo->
-            <ul id="tabspa"></ul>
-            <h4>Pools</h4>  <!- dolphine show, visit ancient castle, sport contest ->
-            <h4>Meals</h4>  <!- dolphine show, visit ancient castle, sport contest ->
-            <h4>Services</h4>  <!- airport shuttle, room service, sport contest ->
-
-        </div>
+        {{!-- <div style="overflow: scroll;">
           
-    <div id="right">
+          <!-- code for DASHBOARD partial -->
+          <script id="dashboard-partial" type="text/x-handlebars-template">
+            {{> dashboard firstlink = "About"}}
+          </script>
 
-      <ol id="messages"></ol>
-      <script id="message-template" type="text/x-handlebars-template">
-        <div>
-          {{text}}
+          <div id="dashboard_placeholder"></div>
         </div>
+        <script src="/js/dashboard.js"></script> --}}
+
+
+      </div>
+      
+      <!-- start of RIGHT hand side panel -->
+    <div id="right">
+      <!-- <div id="testfrag"></div> -->
+      <!-- <div id="pickform"></div> -->
+      
+      <div class="boxedtransp">
+        <label>Announcements and specials !</label>
+        <div style="height:250px;overflow: scroll;">
+          <ol id="shoutboard"></ol>
+        </div>
+        <script id="shout-template" type="x-handlebars-template">
+            <!-- {{#each this}} -->
+              <p><span style="color:gray">{{createdAt}} </span> : <span style="color:green"> {{text}} </span></p>
+            <!-- {{/each}} -->
+        </script>
+  
+        </div>
+  
+    <div class="boxedtransp">
+        <label>Chat with other guests sharing similar interests - select an Interest group first !</label>
+        <div style="height:100px;overflow: scroll;">
+          <ol id="messages"></ol>
+        </div>
+      <form id="message-form">
+        <input id="messageinput" style="width: 80%" name="message" type="text" placeholder="message" autofocus autocomplete="off"/>
+        <button>Send</button><br/><label style="width:80%;text-align:center">Interest groups:</label>
+        <div style="margin:4px;">
+          <button>Surfing</button>
+          <button>Diving</button>
+          <button>Boat trip</button>
+          <button>Paragliding</button>
+          <button>Water polo</button>
+          <button>Beach valley</button>
+          <button>Sea skiing</button>
+          <button>Yoga</button>
+      </div>
+      </form>
+    </div>
+
+    <script id="chat-template" type="x-handlebars-template">
+        <!-- {{#each this}} -->
+          <p><span style="color:red">{{from}}</span> - <span style="color:gray">@ {{timePosted}} </span> : <span style="color:green"> {{text}} </span></p>
+        <!-- {{/each}} -->
       </script>
 
-      <form id="message-form">
-        <input id="messageinput" name="message" type="text" placeholder="message" autofocus autocomplete="off"/>
-        <button>Send</button>
-      </form>
-
-  
-    </div>
-        {{> footer}}
     </div>
 
-      {{!-- script for tooltips --}}
+    </div>
+
+      {{!-- // script for tooltips --}}
       <script>
       $(document).ready(function(){
           $('[data-toggle="tooltip"]').tooltip();   
       });
       </script>
 
-    <script src="/js/index.js"></script>
+
+
+    <video autoplay muted loop id="myVideo">
+      <!-- whitesand.mp4 , Lifeguard.mp4 -->
+        <source src="/static/images/whitesand.mp4" type="video/mp4"> 
+        Your browser does not support HTML5 video.
+      </video>
+
+      <audio loop id="theaudio">
+        <source src="/static/images/wavesound.mp3" type="audio/mpeg">
+        Your browser does not support the audio element.
+      </audio>
+
+      
+      <script id="some-template" type="text/x-handlebars-template"> 
+        <table>
+          <!-- <thead> 
+              <th>Name</th> 
+              <th>Occupancy</th> 
+              <th>Booking</th> 
+          </thead> -->
+          <tbody>
+              {{#users}}
+              <tr>
+                  <td>{{fullName fullName}}</td>
+                  <td>{{occupancy}}</td>
+                  <td><a href="/booking/{{linkedName fullName}}">{{bookNow}}</a></td>
+              </tr> 
+              {{/users}} 
+          </tbody> 
+        </table> 
+        </script>
+
+        <script src="/js/index2.js"></script>
+        <!-- <script src="/js/simulator.js"></script> -->
+
+      <!-- <script id="table-partial" type="text/x-handlebars-template">
+        {{> table firstlink = "About"}}
+      </script>
+
+      <div id="table_placeholder"></div>
+      
+      <script src="/js/table.js"></script> -->
+
   </body>
 </html>
