tried to implement flash messages after adding new items to db (added session and cookie packages), so far does not work in view file though req.flash("success") gets message fine

--- a/views/booking.hbs
+++ b/views/booking.hbs
@@ -29,7 +29,7 @@
   
     <div id="content">
 
-        {{> header firstlink = "About"}}
+        {{> header firstlink = "Home"}}
       
       <div id="left">        
         <div id="leftpanel"></div>
