--- a/public/static/css/custom.css
+++ b/public/static/css/custom.css
@@ -146,17 +146,17 @@ ul.nav a:hover { background-color: #666666  !important; color: #ffffff !importan
 /* ANCHORS */
 
 a{
-	color: #000000;
+	color: #3b83e0;
 	text-decoration: none;
 }
 
 a:link{
-	color: #000000;
+	color: #3b83e0;
 	text-decoration: none;
 }
 
 a:visited{
-	color: #000000;
+	color: #3b83e0;
 	text-decoration: none;
 }
 
@@ -220,7 +220,7 @@ a.lists:active {
 
 a.addn{
 	color: #b5b5b5;
-	font-size: 12px;
+	font-size: 14px;
 }
 
 a.addn:link {
@@ -234,7 +234,7 @@ a.addn:visited {
 a.addn:hover {
     	color: #99cc33;
 	transition-duration: 0.4s;
-	font-size: 12px;
+	font-size: 14px;
 }
 
 a.addn:active {
