--- a/views/partials/pickform.hbs
+++ b/views/partials/pickform.hbs
@@ -125,7 +125,7 @@
                     </div>
                     <input type="hidden" id="dtp_input4" value="" /><br/>
                 </div>
-            <td colspan="2"><button type="submit">Save</button></td>
+            <button type="submit">Save</button>
         </fieldset>
     </form>
 </div>
