--- a/views/adminpage.hbs
+++ b/views/adminpage.hbs
@@ -31,20 +31,6 @@
 
         {{> header firstlink = "Home"}}
 
-    {{#if locals.message}}
-      <div class="alert alert-success" role="alert">
-          <strong>Well done!</strong> {{message.success}}
-    </div>
-    {{/if}}
-
-
-      {{#if success}}
-          <div class="alert alert-success">Success message:{{success}}</div>
-      {{/if}}
-      
-      {{#if error}}
-          <div class="alert alert-danger">Error message:{{error}}</div>
-      {{/if}}
       <div id="left">        
         <div id="leftpanel"></div>
       </div>
@@ -55,6 +41,69 @@
     <div class="alert alert-success">{{success}}</div>
     <div class="alert alert-success">SUCCESS: {{success}}</div>
 {{/if}}
+
+
+<!-- The Modal -->
+<div id="myModal" class="modal">
+
+  <!-- Modal content -->
+  <div class="modal-content">
+    <div class="modal-header">
+      <span class="close">&times;</span>
+      <h2>Modal Header</h2>
+    </div>
+    <div class="modal-body">
+          <p>Add a new booking type:</p>
+          <form id="updateform"  role="form" method="POST">
+            <input id="btid" type="hidden" name="id"/>
+            <input id="btname" type="text" name="name"/> 
+            <button onclick="formSubmit()">Save</button>
+          </form>
+    </div>
+    <div class="modal-footer">
+      <h3>Modal Footer</h3>
+    </div>
+  </div>
+
+</div>
+
+<script>
+// Get the modal
+var modal = document.getElementById('myModal');
+
+// Get the <span> element that closes the modal
+var span = document.getElementsByClassName("close")[0];
+
+// When the user clicks the button, open the modal 
+function showModal(idn, name) {
+    console.log("IDN="+idn);
+    modal.style.display = "block";
+    document.getElementById('btid').setAttribute('value',idn);
+    document.getElementById('btname').setAttribute('value',name);
+}
+
+// When the user clicks on <span> (x), close the modal
+span.onclick = function() {
+    modal.style.display = "none";
+}
+
+// When the user clicks anywhere outside of the modal, close it
+window.onclick = function(event) {
+    if (event.target == modal) {
+        modal.style.display = "none";
+    }
+}
+
+function formSubmit() {
+      var idn = document.getElementById("btid").value;
+      var name = document.getElementById("btname").value;
+      var act = "/admin/bookingtype/"+idn+"/update";
+      {{!-- alert("ACT = "+act); --}}
+      document.getElementById('updateform').setAttribute('action',act).submit();
+      return false;
+    };
+
+</script>
 
 {{!-- <script> $(console.log("Success = "+req.flash('success')));</script>  --}}
 
@@ -68,11 +117,13 @@
             <input type="text" name="name"/> <button type="submit">Save</button>
           </form>
           
-          <br/>
-          <a  href="#"  onclick="myFunction()">to edit or delete existing 'Booking type' use relevant buttons:</a>
+          {{#if list_bookingtypes }}
+            <br/>
+            <a  href="#"  onclick="myFunction()">to edit or delete existing 'Booking type' use relevant buttons:</a>
+          {{/if}}
           <ul>
           {{#each list_bookingtypes}}
-                  <li><span>{{name}}</span> &nbsp; <a class="addn" href="#"> edit </a> &nbsp; <a class="addn" href="#"> delete </a> </li>
+                  <li><span>{{name}}</span> &nbsp; <a class="addn" onclick="showModal('{{id}}', '{{name}}')" href="#"> edit </a> &nbsp; <a class="addn" href="#"> delete </a> </li>
           {{/each}}
           </ul>
           <br/>
