--- a/public/static/css/custom.css
+++ b/public/static/css/custom.css
@@ -436,9 +436,9 @@ tr:nth-child(odd) {
     position: relative;
     background-color: #fefefe;
     margin: auto;
-    padding: 0;
+    padding: 5px;
     border: 1px solid #888;
-    width: 80%;
+    width: 50%;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
     -webkit-animation-name: animatetop;
     -webkit-animation-duration: 0.4s;
