--- a/views/adminpage.hbs
+++ b/views/adminpage.hbs
@@ -85,7 +85,9 @@ var span = document.getElementsByClassName("close")[0];
 // When the user clicks the button, open the modal 
 //( 11, '{{id}}', '{{name}}','sub-name','message',0, 'Edit the booking type name:', '')
 function showModal(type, idn, name, subname, message, price, maintext) {
-    console.log("IDN1="+idn);
+    //console.log("IDN1="+idn);
+    //console.log("NAME1="+name);
+
     modal.style.display = "block";
 
     var fe = getElementVars();
@@ -98,7 +100,6 @@ function showModal(type, idn, name, subname, message, price, maintext) {
     fe.dprice.setAttribute('value',price);
     fe.dtext.innerHTML = name;
     fe.dmaintext.innerHTML = maintext;
-
 
     fe.dtext.style.display = 'none'; 
     if ( type == 12 || type == 20 || type == 22 || type == 32 || type == 42 ) fe.dtext.style.display = 'block';
@@ -158,7 +159,10 @@ function formSubmit() {
       <div class="boxedtransp">
         <label id="labl" style="margin-left:5px;">Admin functions: &nbsp; (change any &amp; see tables change, would require password in real life)</label>
         <ul>
-        <li><a onclick="showModal( 10, '', '','sub-name','message',0, 'Add a new booking type:', '')" href="#"> add new booking type </a></li>
+        <li><a onclick="showModal( 10, '', '','sub-name','message',0, 'Add a new booking type:', '')" href="#"> add new booking type </a>
+          <span style="display:inline-block; width: 150px;"></span>
+          <a data-toggle="tooltip" data-placement="bottom" title='deletes all changes made to Mongoose collections, restores all initial entries to collections as if you never had changed anything !' onclick="" href="#">( Undo all changes, restore defaults )</a>
+        </li>
         <li><a  href="#"  onclick="myFunction('myDIV')">edit / delete existing booking type</a><br/></li>
         <div id="myDIV" style="display:none">
           
@@ -170,8 +174,8 @@ function formSubmit() {
           <ul>
           {{#each list_bookingtypes}}
             <li><span>{{name}}</span> &nbsp; 
-            <a class="addn" onclick="showModal( 11, '{{id}}', '{{name}}','sub-name','message',0, 'Edit the booking type name:', '')" href="#"> edit </a> &nbsp; 
-            <a class="addn" onclick="showModal( 12, '{{id}}', '{{name}}','sub-name','message',0, 'Delete the booking type ?', '')" href="#"> delete </a> &nbsp; 
+            {{!-- <a class="addn" onclick="showModal( 11, '{{id}}', '{{name}}','sub-name','message',0, 'Edit the booking type name:', '')" href="#"> edit </a> &nbsp; 
+            <a class="addn" onclick="showModal( 12, '{{id}}', '{{name}}','sub-name','message',0, 'Delete the booking type ?', '')" href="#"> delete </a> &nbsp;  --}}
             <a class="addn" onclick="showModal( 20, '{{id}}', '{{name}}','','message',0, 'Add a new booking SUB-type:', '')" href="#"> add new SUB-type </a>
             <br/>
           {{/each}}
@@ -199,16 +203,16 @@ function formSubmit() {
         <div id="myDIV2" style="display:none">
 
           {{#if list_subbookingtypes }}
-            <a  href="#"  onclick="myFunction('myDIV2')">&nbsp; &nbsp; &nbsp; - list of existing 'Booking SUB-type's - please use relevant buttons:</a>
+            <a  href="#"  onclick="myFunction('myDIV2')">&nbsp; &nbsp; &nbsp; - list of existing Booking SUB-types - please use relevant buttons:</a>
           {{else}}
             <label style="color:green;font-size:14px;">&nbsp; &nbsp; &nbsp; - no Booking SUB-types are found</label>
           {{/if}}
 
           <ul>
           {{#each list_subbookingtypes}}
-            <li><span>{{subname}} ( {{name}} )</span> &nbsp; 
-            <a class="addn" onclick="showModal( 21, '{{id}}', '{{name}}','{{subname}}','message',0, 'Edit the booking SUB-type name:', '')" href="#"> edit </a> &nbsp; 
-            <a class="addn" onclick="showModal( 22, '{{id}}', '{{name}}','{{subname}}','message',0, 'Delete the booking SUB-type ?', '')" href="#"> delete </a> &nbsp; 
+            <li><span>{{subname}} &nbsp; &nbsp; ( {{parent.name}} )</span> &nbsp; 
+            <a class="addn" onclick="showModal( 21, '{{id}}', '{{parent.name}}','{{subname}}','message',0, 'Edit the booking SUB-type name:', '')" href="#"> edit </a> &nbsp; 
+            <a class="addn" onclick="showModal( 22, '{{id}}', '{{parent.name}}','{{subname}}','message',0, 'Delete the booking SUB-type ?', '')" href="#"> delete </a> &nbsp; 
             <br/>
           {{/each}}
           </ul>
